<resources>
    <string name="app_name">Vitesse</string>
    <string name="tab_all_candidates">All</string>
    <string name="tab_favorites">Favorites</string>
    <string name="text_name">Name</string>
    <string name="text_email">Email</string>
    <string name="text_phone">Phone</string>
    <string name="save">Save</string>
    <string name="add_candidate">Add candidate</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="salary_expectations">Salary expectations</string>
    <string name="notes">Notes</string>
    <string name="empty_field">Cannot be empty</string>
    <string name="fieds_must_be_completed">All fields must be completed</string>
    <string name="about">About</string>
    <string name="salary_expectation">Salary expectation</string>
    <string name="email_label">E-mail</string>
    <string name="sms_label">SMS</string>
    <string name="phone_label">Phone</string>
    <string name="search">Find a candidate</string>
    <string name="email_invalid">Invalid format</string>
    <string name="birthday">Birthday</string>
    <string name="years_old">years old</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Are you sure you want to delete this candidate? This is an irrevocable action. </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_candidate">No candidate</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="enter_a_date">Enter a date</string>
    <string name="settings">Pictures access must be allowed to add a photo on a candidate profile</string>



</resources>